# ai_machine_learning

./: Makefile  README.md  pyproject.toml
hw01/: README.md  aakazachinskiy_ml_hw01_base.ipynb  app.py  cat_features.json  model.pkl  pkg.py
hw02/: aakazachinsky_hw02.ipynb
hw03/: aakazachinskii_hw03.ipynb
