[project]
name = "ml-course-hse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython==7.23.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy<2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "ydata-profiling>=4.12.2",
]
