[project]
name = "ml-course-hse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipython==7.23.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "mlxtend>=0.23.4",
    "numpy<2.0",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pyqt6>=6.10.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "shap<0.45",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "xgboost>=3.1.3",
    "ydata-profiling>=4.12.2",
]
